<!--
     Copyright (C) 2021 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Lutetia</string>
    <!-- Shown above left column listing bus stops in full schedule fragment -->
    <string name="site_header">Site</string>
    <!-- Shown above right column listing arrival times in full schedule fragment -->
    <string name="arrival_time_header">Site</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="get_location">Get Location</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="location_unavailable">XX</string>
    <string name="insert">Add Site</string>
    <string name="site_name">Site Name</string>
    <string name="arrondissement">Arrondissement</string>
    <string name="url">Url</string>
    <string name="notes">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="view_map">View Map</string>
</resources>
